--- a/practice_project.ipynb
+++ b/practice_project.ipynb
@@ -63,27 +63,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 153,
    "id": "7a417a90-3e51-4b1b-9dc0-96852eba9f23",
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = 'nov25eod.csv'"
+    "url = 'http://www.muschamp.ca/OffSite/nov25eod.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 155,
    "id": "479a4316-c97e-49e8-8fba-3b78538f45c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw = pd.read_csv(path, index_col=0, parse_dates=True).dropna()"
+    "raw = pd.read_csv(url, index_col=0, parse_dates=True).dropna()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 157,
    "id": "4f34a2d2-5c7b-447c-96b7-100262a339e3",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
        "2015-12-07  395.53601  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 159,
    "id": "5c48c752-13d6-4336-aaaf-8eecbab7bd0c",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 161,
    "id": "cca5ff43-c8da-4cfa-b91c-9312a046b35b",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,7 @@
        "2025-11-28  0.00442  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 163,
    "id": "55b4c266-129b-4453-ba8a-a50fba9c2669",
    "metadata": {},
    "outputs": [
@@ -487,7 +487,7 @@
        "2015-12-08  0.04939  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 165,
    "id": "97f25832-5af8-4231-851f-2a2d80f8100a",
    "metadata": {},
    "outputs": [
@@ -583,7 +583,7 @@
        "2015-12-02 -0.00915  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 167,
    "id": "f3b1f18d-58bb-4672-a13b-cdc3ad6a27f2",
    "metadata": {},
    "outputs": [],
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 169,
    "id": "aa7d86a7-1c19-4923-aaf7-a47403447cc2",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
        "Index(['AAPL', 'NVDA', 'JPM', 'SPY', 'GLD', 'TLT', 'EURUSD', 'BTC-USD'], dtype='object')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 172,
    "id": "a762bbd1-c319-4a0e-b974-3d0f396ed6dc",
    "metadata": {},
    "outputs": [],
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 174,
    "id": "245150ea-6d5e-4f70-9cee-4a713429a402",
    "metadata": {},
    "outputs": [],
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 176,
    "id": "85f62d17-8e8b-4047-a565-9d6fa9e0ef72",
    "metadata": {},
    "outputs": [
@@ -907,7 +907,7 @@
        "[2202 rows x 8 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 178,
    "id": "b5df91f5-50aa-47b4-ab53-66482fe15c71",
    "metadata": {},
    "outputs": [
@@ -928,7 +928,7 @@
        "['AAPL', 'NVDA', 'JPM']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 180,
    "id": "0f98f9c7-1d61-4386-8cf1-cf19c9a575dc",
    "metadata": {},
    "outputs": [
@@ -1065,7 +1065,7 @@
        "[2202 rows x 3 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 182,
    "id": "215b488b-f8f8-42b7-a4e3-9d0cb8e09099",
    "metadata": {},
    "outputs": [
@@ -1086,7 +1086,7 @@
        "3"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1097,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 184,
    "id": "d7acacf7-1491-4113-a86b-9134d1c7f11c",
    "metadata": {},
    "outputs": [
@@ -1107,7 +1107,7 @@
        "((0, 1), (0, 1), (0, 1))"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 186,
    "id": "d753701d-51af-4bd4-96cd-ff3efe5b9e9f",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1128,7 @@
        "((0.05, 0.95), (0.05, 0.95), (0.05, 0.95))"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 188,
    "id": "97ee531a-18f4-4432-bd4f-643743ccfd1b",
    "metadata": {},
    "outputs": [],
@@ -1151,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 190,
    "id": "08db00d0-f1af-4b55-900c-9e5d5a81dbff",
    "metadata": {},
    "outputs": [
@@ -1161,7 +1161,7 @@
        "((0.05, 0.95), (0.05, 0.95), (0.05, 0.95))"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 192,
    "id": "1c65a07d-7d08-4757-a0b1-5c0d4acda269",
    "metadata": {},
    "outputs": [
@@ -1182,7 +1182,7 @@
        "[0.3333333333333333, 0.3333333333333333, 0.3333333333333333]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 194,
    "id": "2bdd1ebe-d701-49d0-8c97-45a4eb36447a",
    "metadata": {},
    "outputs": [
@@ -1203,7 +1203,7 @@
        "0.36608495673940034"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 196,
    "id": "e2cb8fdf-bf54-4baf-8151-e31fa8159dc5",
    "metadata": {},
    "outputs": [
@@ -1224,7 +1224,7 @@
        "0.3000372581279322"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 198,
    "id": "1b072a4c-6a68-4a4f-a22d-0da5256cb9a1",
    "metadata": {},
    "outputs": [
@@ -1245,7 +1245,7 @@
        "1.2201316563935076"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 200,
    "id": "6b647ede-42d2-4390-b95a-fff9b7d7ee57",
    "metadata": {},
    "outputs": [],
@@ -1266,7 +1266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 202,
    "id": "8c9d83d7-8c3e-4a6f-94de-235e74572a48",
    "metadata": {},
    "outputs": [
@@ -1276,7 +1276,7 @@
        "array([0.3912, 0.0500, 0.5588])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 204,
    "id": "3d71fdbd-e5a2-42fe-b254-ed103fc7bf48",
    "metadata": {},
    "outputs": [],
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 206,
    "id": "f574105e-abf3-47be-9972-97787c6fa399",
    "metadata": {},
    "outputs": [
@@ -1307,7 +1307,7 @@
        "array([0.2186, 0.4671, 0.3143])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 208,
    "id": "01aa48d6-ec86-40f7-9d10-140db9f052d4",
    "metadata": {},
    "outputs": [
@@ -1328,7 +1328,7 @@
        "0.41447269681256826"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 212,
    "id": "244b6ca4-724d-4608-9e40-7d210e292d91",
    "metadata": {},
    "outputs": [],
@@ -1446,7 +1446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 214,
    "id": "a9f1fc47-b11d-45f5-a2c0-04427c8ade45",
    "metadata": {},
    "outputs": [
@@ -1478,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 216,
    "id": "5d771986-4800-4b9a-9900-b32190745152",
    "metadata": {},
    "outputs": [
@@ -1488,7 +1488,7 @@
        "1"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1499,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 218,
    "id": "ecd24901-20d7-4841-a218-2a90a80dbc43",
    "metadata": {},
    "outputs": [
@@ -1509,7 +1509,7 @@
        "array([0.0500, 0.6690, 0.2810])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 220,
    "id": "8da37594-05a1-4b14-8299-1de6813c727f",
    "metadata": {},
    "outputs": [
@@ -1646,7 +1646,7 @@
        "[1950 rows x 3 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1657,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 222,
    "id": "9a93bef2-d6b0-45c6-85a8-c11a2ec6cf44",
    "metadata": {},
    "outputs": [
@@ -1667,7 +1667,7 @@
        "1950"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1678,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 224,
    "id": "39fd4147-3d01-48c3-84a9-6fa89be704f6",
    "metadata": {},
    "outputs": [
@@ -1688,7 +1688,7 @@
        "0.48777816720528816"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1699,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 226,
    "id": "14a8dfcf-fd06-4bec-9e33-69569369fd11",
    "metadata": {},
    "outputs": [],
@@ -1709,7 +1709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 227,
    "id": "d53e6d7b-b4a0-4b2a-b46a-6d809643fe1a",
    "metadata": {},
    "outputs": [],
@@ -1719,7 +1719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 230,
    "id": "81dc1cae-0a37-4f14-b28c-853f0f44cca0",
    "metadata": {},
    "outputs": [
@@ -1874,7 +1874,7 @@
        "[389 rows x 6 columns]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1885,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 232,
    "id": "26f61625-0815-46f3-a7a0-5de7368fc90b",
    "metadata": {},
    "outputs": [],
@@ -1895,7 +1895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 234,
    "id": "ca7ecb00-cd11-4a34-b143-3797f66ba30d",
    "metadata": {},
    "outputs": [],
@@ -1905,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 236,
    "id": "fe70be8f-bc89-4f75-80c8-eb3ac20d074f",
    "metadata": {},
    "outputs": [
@@ -2060,7 +2060,7 @@
        "[92 rows x 6 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 236,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2071,7 +2071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 238,
    "id": "b287de21-4eba-4848-85ab-10b399d576e0",
    "metadata": {},
    "outputs": [],
@@ -2081,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 240,
    "id": "03a65677-d21b-4478-b045-abf1319da5f6",
    "metadata": {},
    "outputs": [
@@ -2120,7 +2120,7 @@
        " 30: array([0.0500, 0.0500, 0.9000])}"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 240,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2131,7 +2131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 242,
    "id": "ecbe8365-1c4d-49d0-9574-a0bf77793d65",
    "metadata": {},
    "outputs": [
@@ -2473,7 +2473,7 @@
        "30  0.15976  0.59182  3.70455  0.18770  0.17017  0.90661"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 242,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2484,7 +2484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 244,
    "id": "8015261e-6350-4f9d-be76-8cdf0bb8dc7e",
    "metadata": {},
    "outputs": [],
@@ -2494,7 +2494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 246,
    "id": "ec76f1d7-e0d5-4be6-a073-5dd7bf3e7a6c",
    "metadata": {},
    "outputs": [
@@ -2510,7 +2510,7 @@
        " 7: array([0.4339, 0.0500, 0.5161])}"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2521,7 +2521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 248,
    "id": "a3202691-af58-4b81-8042-77177af6c682",
    "metadata": {},
    "outputs": [
@@ -2633,7 +2633,7 @@
        "7  0.17497  0.30707  1.75502  0.26817  0.29272  1.09156"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
